<resources>
    <string name="app_name">FyberOffersDemo</string>
    <string name="action_github">GitHub</string>
    <string name="url_my_repo">https://github.com/ChEmO1990/FyberOffersDemo</string>
    <string name="parameters">Parameters</string>
    <string name="titleButtonGetOffers">Get all offers</string>
    <string name="activity_home">Home</string>
    <string name="activity_offers">Offer List</string>
    <string name="title_parameters_default">Load default parameters(PDF)</string>
    <string name="message_parameters_empty">You need to fill all mandatory fields before continue</string>
    <string name="title_uid">UID</string>
    <string name="title_api_key">API KEY</string>
    <string name="title_app_id">APP ID</string>
    <string name="title_pub0">PUB0</string>
    <string name="message_try_again">Try Again</string>
    <string name="no_connection">No Connection</string>
    <string name="message_no_connection">No internet access available. Try again, please.</string>
    <string name="no_offers">No Offers</string>
    <string name="message_no_offers">No offers at this time</string>

    <string name="title_error">Upsss...</string>
    <string name="message_error">An error occurred while trying to find deals.</string>
    <string name="try_again">Try Again!</string>
</resources>
