<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <include layout="@layout/toolbar_actionbar" />

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:layout_gravity="bottom">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_uid"
                android:id="@+id/editUid" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_api_key"
                android:id="@+id/editApiKey" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_app_id"
                android:id="@+id/editAppId" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_pub0"
                android:id="@+id/editPub0" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true">

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleButtonGetOffers"
            android:id="@+id/btnGetOffers"
            style="@style/ButtonFyber"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameters"
            android:id="@+id/textViewTitleParameter"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/TitleHome" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_parameters_default"
            android:textColor="@color/colorPrimary"
            android:id="@+id/checkDefaultParams"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:onClick="onCheckboxClicked"
            android:checked="false" />

    </RelativeLayout>
</LinearLayout>
